[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/graphics/ui/bar.png" type="Texture" id=1]
[ext_resource path="res://assets/graphics/ui/knob.png" type="Texture" id=2]
[ext_resource path="res://Stages/TimeLine.gd" type="Script" id=3]
[ext_resource path="res://assets/graphics/faces/0.png" type="Texture" id=4]
[ext_resource path="res://assets/graphics/faces/203.png" type="Texture" id=5]

[node name="TimeLine" type="TextureProgress"]
margin_left = 51.0951
margin_top = 51.1026
margin_right = 1251.1
margin_bottom = 78.1026
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_under = Color( 1, 1, 1, 0.521569 )
tint_over = Color( 1, 1, 1, 0.521569 )
tint_progress = Color( 1, 1, 1, 0.541176 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 367.211
margin_top = 6.54528
margin_right = 407.211
margin_bottom = 20.5453

[node name="Player1Head" type="Sprite" parent="."]
position = Vector2( 0, -28 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Player2Head" type="Sprite" parent="."]
position = Vector2( 0, -28 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Enemy1Head" type="Sprite" parent="."]
position = Vector2( 0, 48 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="Enemy2Head" type="Sprite" parent="."]
position = Vector2( 0, 48 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="PositionPlayer" type="Position2D" parent="."]

[node name="PositionEnemy" type="Position2D" parent="."]
position = Vector2( 0, 26.6 )
